# dotfiles

./: .tmux.conf  .zshrc  .zshrc.swp  Brewfile  CLAUDE.md  README.md  dotfilesLinks.sh  install.sh
.emacs.d/: #Cask#  (+12 more)
.emacs.d/undohist/: !Users!e155755!.dotfiles!dotfiles!.emacs.d!.cask!25.1!elpa!ace-isearch-0.1.4!ace-isearch-autoloads.el  !Users!e155755!.dotfiles!dotfiles!.emacs.d!.cask!25.1!elpa!avy-20170208.148!avy-autoloads.el  !Users!e155755!.dotfiles!dotfiles!.emacs.d!.cask!25.1!elpa!c-eldoc-20170227.809!c-eldoc-autoloads.el  !Users!e155755!.dotfiles!dotfiles!.emacs.d!.cask!25.1!elpa!google-translate-20161206.1408!google-translate-autoloads.el  !Users!e155755!.dotfiles!dotfiles!.emacs.d!.cask!25.1!elpa!haskell-mode-16.1!haskell-mode-autoloads.el  !Users!e155755!.dotfiles!dotfiles!.emacs.d!.cask!25.1!elpa!helm-dash-1.3.0!helm-dash-autoloads.el  !Users!e155755!.dotfiles!dotfiles!.emacs.d!.cask!25.1!elpa!helm-migemo-1.22!helm-migemo-autoloads.el  !Users!e155755!.dotfiles!dotfiles!.emacs.d!.cask!25.1!elpa!helm-swoop-1.7.2!helm-swoop-autoloads.el  !Users!e155755!.dotfiles!dotfiles!.emacs.d!.cask!25.1!elpa!markdown-mode-20170526.1213!markdown-mode-autoloads.el  !Users!e155755!.dotfiles!dotfiles!.emacs.d!.cask!25.1!elpa!markdown-toc-20170224.2350!markdown-toc-autoloads.el  !Users!e155755!.dotfiles!dotfiles!.emacs.d!.cask!25.1!elpa!py-autopep8-2016.1!py-autopep8-autoloads.el  !Users!e155755!.dotfiles!dotfiles!.emacs.d!.cask!25.1!elpa!quickrun-2.2.8!quickrun-autoloads.el  !Users!e155755!.dotfiles!dotfiles!.emacs.d!.cask!25.1!elpa!smartrep-20150508.1930!smartrep-autoloads.el  (+641 more)
(+1156 files in other folders)
