
((digest . "bb7fcdee560e14c802ba8a64342d72ad") (undo-list nil ("-" . 584) ("-" . 584) (t 22776 26620 0 0) nil (584 . 586) (t 22776 26122 0 0) nil (607 . 614) nil (605 . 607) nil ("." . -605) ((marker) . -1) (" " . -606) ((marker) . -1) 607 nil (605 . 607) nil (584 . 605) ("  , " . 571) (575 . 577) (571 . 573) (583 . 584) (t 22772 22517 0 0) nil (573 . 583) nil (571 . 573) nil (" " . -571) ((marker) . -1) (" " . -572) ((marker) . -1) 573 nil (552 . 573) nil (549 . 552) (t 22772 21968 0 0)))
